--- a/style.css
+++ b/style.css
@@ -21,44 +21,41 @@ h1 {
 }
 
 #container {
-  display: flex;
   position: relative;
 }
 
-#navbar {
-  display: flex;
-  flex-direction: column;
-  border-left: 1px solid black;
-}
 
 .headie {
-  height: 4.25rem;
-  min-width: 17.6875rem;
-  display: grid;
-  position: fixed;
-  align-items: center;
+  text-align: center;
 }
 .headie > h1 {
-  display: flex;
-  padding-left: 2.3125rem;
-  align-items: center;
+  padding-left: 5px;
 }
 
 .overflowy {
-  min-width: 17.6875rem;
-  max-height: 100%;
+  max-width: calc(100vw - 1.09rem);
+  max-height:199px;
   display: grid;
-  grid-template-rows: repeat(14, 2.75rem);
-  position: fixed;
-  overflow-y: scroll;
-  margin-top: 4.24rem;
+  position: relative;
+  overflow-y: auto;
+  border: 1px solid black;
+  border-bottom: 2px solid black;
+
 }
+
 
 .overflowy > a {
   border-top: 1px solid black;
-  align-content: center;
-  line-height: 2.75rem;
-  padding-left: 2.3125rem;
+  display: block;
+  position: relative;
+  padding-left: 20px;
+}
+
+.overflowy > a > p{
+display: block;
+margin: auto;
+margin: 0.6rem;
+
 }
 
 .nav-link {
@@ -69,9 +66,9 @@ h1 {
 
 #main-doc {
   height: 100%;
-  margin-left: 17.5rem;
   border-left: 1px solid black;
-  padding: 1.9375rem 1.25rem 2.5rem 2.375rem;
+  padding: 1.9375rem 1.25rem 2.5rem 1.25rem;
+  margin-top: -23px;
 }
 
 .main-section > div {
@@ -81,11 +78,13 @@ h1 {
   margin-bottom: 0.9375rem;
   margin-left: 1.5625rem;
 }
+
 .main-section > h1,
 p,
 ul > li {
   margin-bottom: 0.9375rem;
 }
+
 .main-section > p {
   margin-left: 0.9375rem;
 }
@@ -93,10 +92,48 @@ ul > li {
 ul {
   padding-left: 4.75rem;
 }
+
 .disc-bullet {
   padding-left: 3.6875rem;
 }
 
 code {
   display: block;
+}
+
+@media screen and (min-width:791px){
+
+#navbar {
+  position: fixed;
+  border-left: 1px solid black;
+  width: 300px;
+}
+
+.headie {
+  align-items: center;
+  margin-top: 20px;  
+}
+
+.overflowy {
+  max-height: calc(100vh - 3rem);
+  overflow-y: scroll;
+}
+
+.overflowy > a {
+  border-top: 1px solid black;
+}
+
+.nav-link {
+  text-decoration: none;
+  color: #4d4e53;
+  font-size: 0.96em;
+}
+
+#main-doc {
+  height: 100%;
+  margin-left: 299px;
+  border-left: 1px solid black;
+  padding: 1.9375rem 1.25rem 2.5rem 2.375rem;
+}
+
 }
